--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-social": "^5.1.1",
     "create-react-app": "^3.4.0",
     "cross-fetch": "2.1.0",
+    "firebase": "^7.20.0",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.13.1",
